# homelai-rpi-shs

./: .gitignore  README.md  pyproject.toml  requirements.txt
Docker/: Dockerfile  docker-compose.yml
config/: grammars.json  keyword.json  valid_entities.json  valid_intents.json
scripts/: run.py
src/homelai_rpi/: __init__.py
src/homelai_rpi/config/: __init__.py  config.py
src/homelai_rpi/diet/: __init__.py  diet_client.py
src/homelai_rpi/vosk/: __init__.py  vosk_recognizer.py
